<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Schulverbund"
            android:textSize="30dp" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_schulverbund_1"
            android:id="@+id/editText_schulverbund_11"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_schulverbund_2"
            android:id="@+id/editText_schulverbund_22"
            android:layout_weight="1" />




    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_schulverbund_3"
            android:id="@+id/editText_schulverbund_33"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_schulverbund_4"
            android:id="@+id/editText_schulverbund_44"
            android:layout_weight="1" />


    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_schulverbund_5"
            android:id="@+id/editText_schulverbund_55"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_schulverbund_6"
            android:id="@+id/editText_schulverbund_66"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_schulverbund_7"
            android:id="@+id/editText_schulverbund_77"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_schulverbund_8"
            android:id="@+id/editText_schulverbund_88"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_schulverbund_9"
            android:id="@+id/editText_schulverbund_99"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_schulverbund_10"
            android:id="@+id/editText_schulverbund_1010"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_schulverbund_11"
            android:id="@+id/editText_schulverbund_1111"
            android:layout_weight="1" />




    </LinearLayout>











    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="speichern"
            android:id="@+id/button_add_schulverbund"
            android:layout_weight="1"/>

    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="alle speichern"
            android:id="@+id/button_add_schulverbunds"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="finde Schulverbund"
            android:id="@+id/button_select_schulverbund"
            />

    </LinearLayout>




    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listview_schulverbunds"
        android:layout_gravity="center_horizontal" />

</LinearLayout>