<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Schueler"
            android:textSize="30dp" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_schueler_1"
            android:id="@+id/editText_schueler_11"
            android:layout_weight="1" />


        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_schueler_2"
            android:id="@+id/editText_schueler_22"
            android:layout_weight="1" />







    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_schueler_3"
            android:id="@+id/editText_schueler_33"
            android:layout_weight="1" />


        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_schueler_4"
            android:id="@+id/editText_schueler_44"
            android:layout_weight="1" />




    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/dialog_schueler_5"
            android:id="@+id/editText_schueler_55"
            android:layout_weight="1" />


        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_schueler_6"
            android:id="@+id/editText_schueler_66"
            android:layout_weight="1" />




    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_schueler_7"
            android:id="@+id/editText_schueler_77"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_schueler_8"
            android:id="@+id/editText_schueler_88"
            android:layout_weight="1" />




    </LinearLayout>






    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="speichern"
            android:id="@+id/button_add_schueler"
            android:layout_weight="1"/>

    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="alle speichern"
            android:id="@+id/button_add_schuelers"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="finde Schueler"
            android:id="@+id/button_select_schueler"
            />

    </LinearLayout>




    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listview_schuelers"
        android:layout_gravity="center_horizontal" />

</LinearLayout>