<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_gueltigkeitsbereich_1"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginEnd="5sp" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/editText_gueltigkeitsbereich_1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_gueltigkeitsbereich_2"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginEnd="5sp" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="3"
            android:id="@+id/editText_gueltigkeitsbereich_2" />
    </LinearLayout>




    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_gueltigkeitsbereich_3"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginEnd="5sp" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="3"
            android:id="@+id/editText_gueltigkeitsbereich_3" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_gueltigkeitsbereich_4"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginEnd="5sp" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="3"
            android:id="@+id/editText_gueltigkeitsbereich_4" />
    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_gueltigkeitsbereich_5"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginEnd="5sp" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="3"
            android:id="@+id/editText_gueltigkeitsbereich_5" />
    </LinearLayout>








</LinearLayout>